# libinfra

./: Makefile.am  README.md  configure.ac  libinfra.pc.in
doc/: fdl-1.3.texi  libinfra.texi  version.texi
libinfra/: logger.h  timer.h
src/: logger.c  timer.c
